--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+!.gitignore
+.DS_Store
+# 项目忽略文件
 
-FanKit.xcodeproj/project.xcworkspace/xcuserdata/fanxiangyang.xcuserdatad/UserInterfaceState.xcuserstate
+FanKit.xcodeproj/project.xcworkspace/xcuserdata/
+FanKit.xcodeproj/xcuserdata/
+
+#pod内容
+Pods
+
+#swift package 忽略文件
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+
+# 编辑器配置文件
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
